# slay_gauss

./: CMakeLists.txt  README.md
include/: concat_mat.h  slay_defs.h  slay_gauss.h
src/: concat_mat.cpp  main2.cpp  slay_gauss.cpp
